force-app/main/default/objects/DHS_Investigator_Check__c/fields/Case_Materials_With_PII__c.field-meta.xml
<CustomField>
    <fullName>Case_Materials_With_PII__c</fullName>
    <label>Case Materials With PII</label>
    <length>255</length>
    <type>Text</type>
</CustomField>