force-app/main/default/objects/DHS_Investigator_Check__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>