force-app/main/default/objects/DHS_Investigator_Check__c/fields/CheckOut_Comments__c.field-meta.xml
<CustomField>
    <fullName>CheckOut_Comments__c</fullName>
    <label>CheckOut Comments</label>
    <type>TextArea</type>
</CustomField>