force-app/main/default/objects/DHS_Investigator_Check__c/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <label>Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>