force-app/main/default/objects/DHS_Investigator_Check__c/fields/DHS_TimeSheet__c.field-meta.xml
<CustomField>
    <fullName>DHS_TimeSheet__c</fullName>
    <label>TimeSheet</label>
    <referenceTo>DHS_TimeSheet__c</referenceTo>
    <relationshipLabel>Investigator Checks</relationshipLabel>
    <relationshipName>DHS_Investigator_Checks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>