force-app/main/default/objects/DHS_Investigator_Check__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CheckIn</fullName>
            </value>
            <value>
                <fullName>CheckOut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>